added tableview to display list of albums and tapping on said album will then show each song with corresponding song play counts

--- a/mycoolapp/Info.plist
+++ b/mycoolapp/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>yo fam accept this shit so i can read from your apple music library </string>
 </dict>
 </plist>
